v1.0.3
========================
- Fixed a problem that faced Google Authenticator app for iPhone when scanning generated QR codes
- Updated libraries to the latest version

v1.0.2
========================
- Little changes to adapt user interface to 3.8 version style
- Updated libraries to the latest version

v1.0.1
========================
- Fixed a problem where the module didn't load when requirements were not met
- Fixed a problem that OTP module didn't show up in any user's card
- Updated external libraries
- Better error reporting